--- a/index.html
+++ b/index.html
@@ -332,6 +332,45 @@
                         </div>
                     </div>
                 </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMmJhOTVlYmEtZWQ1Zi00MzM0LTk3MTktNTM0NzY4YjJjNGFlIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Controle de Melhoria" data-description="Controle de Melhoria(Notificações Técnicas), Curva S e Plano 6M">
+                    <div class="bi-card-image">
+                        <img src="images/Controle de Melhorias.png" alt="Controle de Melhorias">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Controle de Melhorias</h3>
+                        <p class="bi-card-description">Controle de Melhorias (Notificações Técnicas), Curva S e Plano 6M</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYjlhNjJlNzctZmNlNC00NzJkLTgyNjktMzIyMmI0YTAzMzA3IiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9&pageName=58985bba85e8d6e57c9c" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Perfil de Perda - Vale" data-description="Análise de perfil de perda de máquinas na Vale">
+                    <div class="bi-card-image">
+                        <img src="images/Perfil de Perda.png" alt="Perfil de Perda Vale">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Perfil de Perda - Vale</h3>
+                        <p class="bi-card-description">Análise de perfil de perda de máquinas na Vale</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="http://admintelemetria.xcmgbrasil.com.br/" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Telemetria" data-description="Site de telemetria da Onbard">
+                    <div class="bi-card-image">
+                        <img src="images/telemetria.png" alt="Telemetria">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Telemetria</h3>
+                        <p class="bi-card-description">Site de telemetria da Onbard para acompanhamento das máquinas</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </section>
 
@@ -347,7 +386,7 @@
                         <img src="images/xde260.jpeg" alt="Caminhão XDE260">
                     </div>
                     <div class="bi-card-content">
-                        <h3 class="bi-card-title">Desempenho do Teste do XDE260</h3>
+                        <h3 class="bi-card-title">Análise de Desempenho Operacional Durante o Teste do XDE260</h3>
                         <p class="bi-card-description">Dashboard do desempenho operacional do Caminhão Diesel-Elétrico XDE260</p>
                         <div class="bi-card-link">
                             Acessar BI
@@ -378,19 +417,85 @@
                 <span>Inteligência de Mercado</span>
             </div>
             <div class="cards-grid" id="mercado-grid">
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNmEzNjRjYzEtODdkMS00MDJlLTk1MDEtY2IwYzNmNjQ5NjBlIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Distribuição de máquinas" data-description="Inteligência de mercado e distribuição de máquinas">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTEyNWU4YzEtNGUwYS00NTFiLWFmYzgtMDE1ZTcyMmVlNDRjIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Importação" data-description="Gráficos de importações de caminhões no Brasil">
                     <div class="bi-card-image">
-                        <img src="images/IntelMer.png" alt="Distribuição de Máqinas">
+                        <img src="images/Caminhões.jpg" alt="Caminhões">
                     </div>
                     <div class="bi-card-content">
-                        <h3 class="bi-card-title">Distribuição de máquinas</h3>
-                        <p class="bi-card-description">Inteligência de mercado e distribuição de máquinas</p>
+                        <h3 class="bi-card-title">Importação - Caminhões</h3>
+                        <p class="bi-card-description">Gráficos de importações de caminhões no Brasil</p>
                         <div class="bi-card-link">
                             Acessar BI
                             <span class="arrow">→</span>
                         </div>
                     </div>
                 </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNzVlNjgzZGMtMjA0ZS00ZjRkLWE4NDQtOTExMTlhNGVlMThmIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Importação - Motoniveladoras" data-description="Gráficos de importações de motoniveladoras no Brasil">
+                    <div class="bi-card-image">
+                        <img src="images/Motoniveladoras.png" alt="Motoniveladoras">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Importação - Motoniveladoras</h3>
+                        <p class="bi-card-description">Gráficos de importações de motoniveladoras no Brasil</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiZjA0ZTczNmEtZDJkYS00NDAxLTlhMmQtYTZkZWNkMDU0Y2FkIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Importação - Escavadeiras e Mini Escavadeira" data-description="Gráficos de importações de escavadeiras e mini escavadeiras no Brasil">
+                    <div class="bi-card-image">
+                        <img src="images/Escavadeiras.jpg" alt="Escavadeiras">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Importação - Escavadeiras e Mini Escavadeira</h3>
+                        <p class="bi-card-description">Gráficos de importações de escavadeiras e mini escavadeiras no Brasil</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNDdhMDkxNWQtYWVjMC00NTk4LTk3OGQtYjlkMzE0MzBiMmRkIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Guindastes Emplacamento" data-description="Gráfico de emplacamento de Guindastes">
+                    <div class="bi-card-image">
+                        <img src="images/EmplacamentoGuindaste.png" alt="Emplacamento Guindaste">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Guindastes - Emplacamento</h3>
+                        <p class="bi-card-description">Gráfico de emplacamento de guindastes</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiZjI4MjQ2ZjMtNDAzYi00YjQzLWFiMDUtYzczYjgzZWU1ZjJlIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Importação - Guindaste" data-description="Gráficos de importações de guindastes">
+                    <div class="bi-card-image">
+                        <img src="images/guindaste XCMG-XCT80.png" alt="Guindaste">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Importação - Guindaste</h3>
+                        <p class="bi-card-description">Gráficos de importações de guindastes</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiM2U2ZmFjNzQtNzQ1Yy00NDQyLTk1OWYtNzlhNTNhZTIyMDk3IiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Importação - Rolo Compactador" data-description="Gráficos de importações de rolo compactador">
+                    <div class="bi-card-image">
+                        <img src="images/rolo compactador.png" alt="Rolo Compactador">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Importação - Rolo Compactador</h3>
+                        <p class="bi-card-description">Gráficos de importações de rolo compactador</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                
             </div>
         </section>
 
@@ -398,14 +503,29 @@
         <section class="category-section" data-category="performance">
             <div class="category-header">
                 <div class="category-bar"></div>
-                <span>Diversos</span>
+                <span>Aplicação</span>
             </div>
             <div class="cards-grid" id="diversos-grid">
-                <a href="" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Diversos" data-description="Análise de BI diversos">
-                    <div class="bi-card-top"></div>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNmEzNjRjYzEtODdkMS00MDJlLTk1MDEtY2IwYzNmNjQ5NjBlIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Distribuição de máquinas" data-description="Gerenciamento de cobertura e distribuição de máquinas">
+                    <div class="bi-card-image">
+                        <img src="images/IntelMer.png" alt="Cobertura de Máquinas">
+                    </div>
                     <div class="bi-card-content">
-                        <h3 class="bi-card-title">Diversos</h3>
-                        <p class="bi-card-description">BI diversos</p>
+                        <h3 class="bi-card-title">Cobertura de Máquinas</h3>
+                        <p class="bi-card-description">Gerenciamento de cobertura e distribuição de máquinas</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiN2I2ZWUyMDctODkwNS00OTM2LTk0YjktMmNlMjYxNjhlMGY5IiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Reunião Perfil de Perda" data-description="Reunião de análise de perfil de perda através de DF, HMC e NIC">
+                    <div class="bi-card-image">
+                        <img src="images/Reunião Perfil de Perda.png" alt="Reunião Perfil de Perda">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Reunião Perfil de Perda</h3>
+                        <p class="bi-card-description">Reunião de análise de perfil de perda através de DF, HMC e NIC dos equipamentos</p>
                         <div class="bi-card-link">
                             Acessar BI
                             <span class="arrow">→</span>
