--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ if (localStorage.getItem("acessoPermitido") !== "true") {
                 <img src="images/XCMG_logo.svg.png" alt="Logo XCMG" class="xcmg-logo">
         </div>
         <div class="language-selector">
-                <a href="index.html" class="language-btn" style="text-decoration: none;">Portugês</a>
+                <a href="index.html" class="language-btn" style="text-decoration: none;">Português</a>
                 <a href="index-en.html" class="language-btn" style="text-decoration: none;">English</a>
             </div>
         <h1>Centro Integrado de BI - Engenharia de Aplicação</h1>
