--- a/index-en.html
+++ b/index-en.html
@@ -532,6 +532,35 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiOGJlMWY4ZDgtZGE3Yi00NjcyLTlhYmUtZGQ1ODJmNGM2ZGVjIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Import - Wheel Loader and Mini Wheel Loader" data-description="Import charts for wheel loaders and mini wheel loaders">
+    <div class="bi-card-image">
+        <img src="images/Carregadeira.jpg" alt="Wheel Loader">
+    </div>
+    <div class="bi-card-content">
+        <h3 class="bi-card-title">Import - Wheel Loader and Mini Wheel Loader</h3>
+        <p class="bi-card-description">Import charts for wheel loaders and mini wheel loaders</p>
+        <div class="bi-card-link">
+            Access BI
+            <span class="arrow">→</span>
+        </div>
+    </div>
+</a>
+
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiOGMzZDIzZmItNmUyMi00YTdiLTlhZDMtYzgzNzdjNjk5YmE2IiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Market Study - LATAM" data-description="Market study charts - LATAM">
+                    <div class="bi-card-image">
+                        <img src="images/Estudo de mercado.png" alt="Market Study">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Market Study - LATAM</h3>
+                        <p class="bi-card-description">Market study charts - LATAM</p>
+                        <div class="bi-card-link">
+                            Access BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+
             </div>
         </section>
 
@@ -568,6 +597,20 @@
                         </div>
                     </div>
                 </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMmQ3OTc4ZTItOTZkOS00ODgwLWE1NGItYjUyY2U4MTFkNTJkIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Technical Documents Issued to the Commercial Department" data-description="Survey of technical documents issued to the commercial department">
+                    <div class="bi-card-image">
+                        <img src="images/documentações técnicas.png" alt="Technical Documents">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Technical Documents Issued to the Commercial Department</h3>
+                        <p class="bi-card-description">Survey of technical documents issued to the commercial department</p>
+                        <div class="bi-card-link">
+                            Open BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+
             </div>
         </section>
     </main>
