--- a/index.html
+++ b/index.html
@@ -532,6 +532,33 @@ if (localStorage.getItem("acessoPermitido") !== "true") {
                         </div>
                     </div>
                 </a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiOGJlMWY4ZDgtZGE3Yi00NjcyLTlhYmUtZGQ1ODJmNGM2ZGVjIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Importação - Pá Carregadeira e Mini Pá Carregadeira" data-description="Gráficos de importações de pá carregadeira e mini pá carregadeira">
+                    <div class="bi-card-image">
+                        <img src="images/Carregadeira.jpg" alt="Carregadeira">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Importação - Pá Carregadeira e Mini Pá Carregadeira</h3>
+                        <p class="bi-card-description">Gráficos de importações de pá carregadeira e mini pá carregadeira</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiOGMzZDIzZmItNmUyMi00YTdiLTlhZDMtYzgzNzdjNjk5YmE2IiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Estudo de Mercado - LATAM" data-description="Gráficos de estudo de mercado - latam">
+                    <div class="bi-card-image">
+                        <img src="images/Estudo de mercado.png" alt="Estudo de Mercado">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Estudo de Mercado - LATAM</h3>
+                        <p class="bi-card-description">Gráficos de estudo de mercado - latam</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
                 
             </div>
         </section>
@@ -563,6 +590,20 @@ if (localStorage.getItem("acessoPermitido") !== "true") {
                     <div class="bi-card-content">
                         <h3 class="bi-card-title">Reunião Perfil de Perda</h3>
                         <p class="bi-card-description">Reunião de análise de perfil de perda através de DF, HMC e NIC dos equipamentos</p>
+                        <div class="bi-card-link">
+                            Acessar BI
+                            <span class="arrow">→</span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMmQ3OTc4ZTItOTZkOS00ODgwLWE1NGItYjUyY2U4MTFkNTJkIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Documentações Técnicas Emitidas Para o Comercial" data-description="Levantamento das documentações técnicas emitidas para o comercial">
+                    <div class="bi-card-image">
+                        <img src="images/documentações técnicas.png" alt="Documentações Técnicas">
+                    </div>
+                    <div class="bi-card-content">
+                        <h3 class="bi-card-title">Documentações Técnicas Emitidas Para o Comercial</h3>
+                        <p class="bi-card-description">Levantamento das documentações técnicas emitidas para o comercial</p>
                         <div class="bi-card-link">
                             Acessar BI
                             <span class="arrow">→</span>
