--- a/index-en.html
+++ b/index-en.html
@@ -597,7 +597,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMmQ3OTc4ZTItOTZkOS00ODgwLWE1NGItYjUyY2U4MTFkNTJkIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Technical Documents Issued to the Commercial Department" data-description="Survey of technical documents issued to the commercial department">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiZjAxNGE3YTctMjA2ZS00ZDFmLWFjMDItMWU2YzE3ZTRmZjQxIiwidCI6ImZmNGQ4ZGY1LWYwNTAtNDdiOC04Y2Y4LWFlNzk5NGYwYTAxZCJ9" target="_blank" rel="noopener noreferrer" class="bi-card" data-name="Technical Documents Issued to the Commercial Department" data-description="Survey of technical documents issued to the commercial department">
                     <div class="bi-card-image">
                         <img src="images/documentações técnicas.png" alt="Technical Documents">
                     </div>
@@ -605,7 +605,7 @@
                         <h3 class="bi-card-title">Technical Documents Issued to the Commercial Department</h3>
                         <p class="bi-card-description">Survey of technical documents issued to the commercial department</p>
                         <div class="bi-card-link">
-                            Open BI
+                            Access BI
                             <span class="arrow">→</span>
                         </div>
                     </div>
