--- a/index-en.html
+++ b/index-en.html
@@ -602,8 +602,8 @@
                         <img src="images/documentações técnicas.png" alt="Technical Documents">
                     </div>
                     <div class="bi-card-content">
-                        <h3 class="bi-card-title">Technical Documents Issued to the Commercial Department</h3>
-                        <p class="bi-card-description">Survey of technical documents issued to the commercial department</p>
+                        <h3 class="bi-card-title">List of Technical Documents Issued for the Commercial Area by Model</h3>
+                        <p class="bi-card-description">Survey of technical documentation issued for the commercial area by model.</p>
                         <div class="bi-card-link">
                             Access BI
                             <span class="arrow">→</span>
