--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@ if (localStorage.getItem("acessoPermitido") !== "true") {
                         <img src="images/documentações técnicas.png" alt="Documentações Técnicas">
                     </div>
                     <div class="bi-card-content">
-                        <h3 class="bi-card-title">Documentações Técnicas Emitidas Para o Comercial</h3>
-                        <p class="bi-card-description">Levantamento das documentações técnicas emitidas para o comercial</p>
+                        <h3 class="bi-card-title">Relação de Documentações Técnicas Emitidas para a Área Comercial por Modelo</h3>
+                        <p class="bi-card-description">Levantamento das documentações técnicas emitidas para a área comercial por modelo</p>
                         <div class="bi-card-link">
                             Acessar BI
                             <span class="arrow">→</span>
